# Dalva

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docker/duckdb/init/: 01-schema.sql  02-seed.sql
docker/duckdb/parquet/: itens_venda.parquet  produtos.parquet  vendas.parquet
docker/pgadmin/: servers.json
docker/postgres/init/: 01-schema.sql  02-seed.sql  03-readonly-role.sql
docker/postgres/scripts/: grant-readonly-role.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/config/: api.ts
frontend/src/hooks/: useChatSession.ts
frontend/src/pages/: ChatPage.tsx
frontend/src/services/: dalvaApi.ts
frontend/src/test/: ChatPage.test.tsx  dalvaApi.test.ts  mswServer.ts  setup.ts
src/dalva_backend/: config.py  exceptions.py  main.py
tests/: conftest.py
tests/integration/: test_dalva_route.py  test_dalva_route_db.py  test_dalva_route_db_security.py  test_duckdb_init.py  test_duckdb_live.py
tests/unit/: test_chart_builder.py  test_chart_option_validator.py  test_chart_resolver.py  test_chat_service.py  test_database_repository.py  test_init_db.py  test_llm_repository.py  test_parquet_seed.py  test_readonly_sql_database.py  test_sql_agent_repository.py  test_sql_validator.py
(+20 files in other folders)
