[project]
name = "pdv-ai"
version = "0.1.0"
description = "PDV-AI — LangChain + FastAPI starter"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "pydantic-settings>=2.6.0",
    "langchain-community>=0.4.2",
    "sqlalchemy>=2.0.49",
    "psycopg[binary]>=3.3.4",
    "sqlparse>=0.5.5",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dalva_backend"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "db: tests requiring a live PostgreSQL instance (optional, not run by default)",
]
